<resources>
    <string name="app_name" translatable="false">RPM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="GoogleKey">AIzaSyC162bg5xfftD66bXYjOR5aoyJ2rezey4A</string>

    <string name="Home">Home</string>
    <string name="Rpm">Rpm</string>
    <string name="Menu">Menu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="txt_registrarme">Registrarme</string>
    <string name="txt_contrase_a">Contraseña</string>
    <string name="txt_contrase_a_hint">minimo 6 caracteres</string>
    <string name="txt_correo_electronico">Correo electronico</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_correo_hint">example@sena.edu.co</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_nombre">Nombre Completo</string>
    <string name="txt_nombre_register">Nombre</string>
    <string name="txt_registro">Registro</string>
    <string name="txt_registrate">Registrate</string>
    <string name="txt_telefono_hint">+57</string>
    <string name="txt_inicia_sesion">Inicia Sesion</string>
    <string name="txt_si_no_tienes_cuenta">Si no tienes cuenta,</string>
    <string name="txt_si__tienes_cuenta">¿Si tienes cuenta?,</string>
    <string name="txt_numero_identificacion">cc</string>
    <string name="txt_identificacion">Identificacion</string>
    <string name="txt_numero_Telefono">Numero de Telefono</string>
    <string name="txt_telefono">Telefono</string>

    <string name="default_web_client_id" />


</resources>
